--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <title>Document</title>
@@ -13,16 +15,32 @@
 <body>
     <div id="app"></div>
 
-    <script>
+    <script type="text/babel">
         class App extends React.Component {
+            state = {
+                name: "Zach",
+                age: 26
+            }
+            handleClick(e){
+                console.log(e.target);
+            }
+            handleMouseOver(e){
+                console.log(e)
+            }
             render() {
                 return (
                     <div className="app-content">
                         <h1>Hey, ninjas</h1>
+                        <p>My name is: {this.state.name} and I am {this.state.age}</p>
+                        <button onClick={this.handleClick}>Click Me</button>
+                        <button onMouseOver={this.handleMouseOver}>Hover Me</button>
                     </div>
                 )
             }
         }
+
+        ReactDOM.render(<App />, document.getElementById('app'));
+        
     </script>
 </body>
 
